--- a/src/scss/components/item/_list.scss
+++ b/src/scss/components/item/_list.scss
@@ -12,6 +12,10 @@
 		justify-content: center;
 		align-items: center;
 	}
+
+	.icon-spin {
+		color: var(--color-accent);
+	}
 }
 
 .items-list {
